# ContrastBalancer-multithreading

./: .gitattributes  .gitignore  1.ppm  2.ppm  CMakeLists.txt  Picture1.ppm  args_parser.cpp  args_parser.h  csv_writer.cpp  csv_writer.h  in.ppm  kernel.cl  main.cpp  out.ppm  pnm.cpp  pnm.cu  pnm.h  resultv2.xlsx  test.cu  time_monitor.cpp  time_monitor.h
Images/: 2.ppm  3.ppm  Picture1.ppm  in.ppm  one_color.ppm  out.ppm
